[gd_scene load_steps=12 format=2]

[ext_resource path="res://models/perrito2.dae" type="PackedScene" id=1]
[ext_resource path="res://models/perrito.gd" type="Script" id=2]
[ext_resource path="res://fuentes/Firestarter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://models/fuego2.tscn" type="PackedScene" id=4]
[ext_resource path="res://imagenes/dragon-fuego.png" type="Texture" id=5]
[ext_resource path="res://imagenes/gargola desubicada.png" type="Texture" id=6]
[ext_resource path="res://imagenes/calavera2.png" type="Texture" id=7]
[ext_resource path="res://sonido/Aplausos.mp3" type="AudioStream" id=8]

[sub_resource type="CapsuleShape" id=1]
margin = 1.0

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.69371, 0.319532, 1.09075 )

[node name="perrito" type="Spatial"]
script = ExtResource( 2 )

[node name="perrito2" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="TimerGO" type="Timer" parent="."]

[node name="TimerWin" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TimerWin"]
stream = ExtResource( 8 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1.55848, 0, 0, 0, 1.5442, 0, 0, 0, 5.82102, 0, 0.261186, 0 )
shape = SubResource( 1 )

[node name="tiempoPe" type="Timer" parent="."]

[node name="hud" type="Node2D" parent="."]

[node name="mensaje" type="Label" parent="hud"]
margin_left = 133.0
margin_top = 77.0
margin_right = 173.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )

[node name="TimerM" type="Timer" parent="hud/mensaje"]

[node name="Sprite" type="Sprite" parent="hud"]
position = Vector2( 868, 291 )
texture = ExtResource( 6 )

[node name="cal" type="Sprite" parent="hud"]
position = Vector2( 853, 303 )
scale = Vector2( 4.21875, 4.46875 )
texture = ExtResource( 7 )

[node name="fuego2" parent="." instance=ExtResource( 4 )]

[node name="Sprite3D" type="Sprite3D" parent="."]

[node name="TimerDragon" type="Timer" parent="."]

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 0.887055, 0, 0, 0, 1.11692, 0, 0, 0, 1, 0, 0.408749, 0 )
shape = SubResource( 4 )

[node name="dragon" type="Sprite3D" parent="."]
transform = Transform( -0.0638356, 0, -0.99796, 0, 3.04287, 0, 4.16241, 0, -0.266253, -0.729392, 1.63847, -0.00909519 )
texture = ExtResource( 5 )

[connection signal="timeout" from="TimerGO" to="." method="_on_TimerGO_timeout"]
[connection signal="timeout" from="TimerWin" to="." method="_on_TimerWin_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="timeout" from="tiempoPe" to="." method="_on_tiempoPe_timeout"]
[connection signal="timeout" from="hud/mensaje/TimerM" to="." method="_on_TimerM_timeout"]
[connection signal="timeout" from="TimerDragon" to="." method="_on_TimerDragon_timeout"]
